new README and index.html

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,12 @@
 ---
 title: "CanDash - Cannabis Dashboards"
-output: github_document
+output: 
+  html_document: 
+    toc: yes
+    highlight: haddock
+    theme: united
+    number_sections: yes
+    keep_md: yes
 ---
 
 ```{r setup, include=FALSE}
